--- a/res/values/custom_colors.xml
+++ b/res/values/custom_colors.xml
@@ -22,5 +22,10 @@
     <!-- Suggestion cards -->
     <color name="suggestion_card_background">#fafafa</color>
 
+
+    <!-- Switch bar -->
+    <color name="switch_bar_bg_activated_dark">#242424</color>
+    <color name="switch_bar_bg_deactivated_dark">#333333</color>
+
 </resources>
 
