--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -45,4 +45,28 @@
         <item>org.pixelexperience.overlay.accent.white</item>
     </string-array>
 
+    <!-- Titles for SystemUI theme preference. -->
+    <string-array name="systemui_theme_entries" >
+        <item>@string/systemui_theme_wallpaper</item>
+        <item>@string/systemui_theme_light</item>
+        <item>@string/systemui_theme_dark</item>
+    </string-array>
+
+    <!-- Values for SystemUI theme preference. -->
+    <string-array name="systemui_theme_values" translatable="false" >
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <!-- Dark theme style -->
+    <string-array name="dark_theme_style_entries" >
+        <item>@string/dark_theme_style_default</item>
+        <item>@string/dark_theme_style_black</item>
+    </string-array>
+    <string-array name="dark_theme_style_values" translatable="false" >
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
