--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -158,6 +158,13 @@
         android:entries="@array/systemui_theme_entries"
         android:entryValues="@array/systemui_theme_values" />
 
+       <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
+        android:key="dark_theme_style"
+        android:title="@string/dark_theme_style_title"
+        android:entries="@array/dark_theme_style_entries"
+        android:entryValues="@array/dark_theme_style_values"
+        android:defaultValue="0" />
+
     <ListPreference
         android:key="theme"
         android:title="@string/color_theme"
