Settings: Introduce RGB accenter [2/2]
aosip edit:
-move to settings under display
-modify for preference controller

Change-Id: Ifc30e05ec689c22c891ddcd2522ad99a9a0782ca
Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -243,4 +243,6 @@
     <string name="system_theme_dark">Dark</string>
     <string name="blackaf_theme_title">Use Black theme</string>
     <string name="blackaf_theme_summary">Use black theme in place of dark</string>
+    <string name="accent_color">Accent color</string>
+
 </resources>
