--- a/res/layout/storage_summary.xml
+++ b/res/layout/storage_summary.xml
@@ -35,8 +35,8 @@
         android:fontFamily="@*android:string/config_headlineFontFamily"
         android:singleLine="true"
         android:textAlignment="viewStart"
-        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
-        android:textColor="@color/storage_summary_title_color"
+        android:textAppearance="@*android:style/TextAppearancePreference"
+        android:textColor="?android:attr/colorAccent"
         android:textSize="36sp"/>
 
     <TextView
