--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -241,4 +241,6 @@
     <string name="system_theme_wallpaper">Automatic (based on time of day)</string>
     <string name="system_theme_light">Light</string>
     <string name="system_theme_dark">Dark</string>
+    <string name="blackaf_theme_title">Use Black theme</string>
+    <string name="blackaf_theme_summary">Use black theme in place of dark</string>
 </resources>
